// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table matches snapshot for example: example mount 1`] = `
.emotion-4 {
  border: 0;
  border-collapse: collapse;
  box-sizing: border-box;
  border-spacing: 0;
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 14px;
  line-height: 1.1428571429;
  width: 100%;
}

@media only screen and (min-width:641px) {
  .emotion-4 {
    font-size: 16px;
    line-height: 1.25;
  }
}

.glamor-0,
[data-glamor-0] {
  font-family: "nta", Arial, sans-serif;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.25;
  text-align: left;
  text-transform: none;
  width: 100%;
}

.glamor-1,
[data-glamor-1] {
  border: 0;
  border-bottom: 1px solid #bfc1c3;
  font-family: "nta", Arial, sans-serif;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  padding: 0.63158em 1.05263em 0.47368em 0;
  text-align: left;
  text-transform: none;
}

.glamor-1:last-child,
[data-glamor-1]:last-child {
  padding-right: 0;
}

@media only screen and (min-width: 641px) {
  .glamor-0,
  [data-glamor-0] {
    font-size: 19px;
    line-height: 1.3;
  }
}

@media only screen and (min-width: 641px) {
  .glamor-1,
  [data-glamor-1] {
    font-size: 19px;
    line-height: 1.3;
  }
}

<Table
  body={
    <Row>
      <Cell>
        Example
      </Cell>
    </Row>
  }
>
  <Styled(table)>
    <table
      className="glamor-4"
    >
      <glamorous(caption)>
        <caption
          className="glamor-0"
        />
      </glamorous(caption)>
      <glamorous(tbody)>
        <tbody
          className="glamor-2"
        >
          <Row>
            <glamorous(tr)>
              <tr
                className="glamor-2"
              >
                <Cell>
                  <glamorous(td)>
                    <td
                      className="glamor-1"
                    >
                      Example
                    </td>
                  </glamorous(td)>
                </Cell>
              </tr>
            </glamorous(tr)>
          </Row>
        </tbody>
      </glamorous(tbody)>
    </table>
  </Styled(table)>
</Table>
`;

exports[`Table matches snapshot for exampleWithHead: exampleWithHead mount 1`] = `
.emotion-7 {
  border: 0;
  border-collapse: collapse;
  box-sizing: border-box;
  border-spacing: 0;
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 14px;
  line-height: 1.1428571429;
  width: 100%;
}

@media only screen and (min-width:641px) {
  .emotion-7 {
    font-size: 16px;
    line-height: 1.25;
  }
}

.glamor-0,
[data-glamor-0] {
  font-family: "nta", Arial, sans-serif;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.25;
  text-align: left;
  text-transform: none;
  width: 100%;
}

.glamor-1,
[data-glamor-1] {
  border: 0;
  border-bottom: 1px solid #bfc1c3;
  font-family: "nta", Arial, sans-serif;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  padding: 0.63158em 1.05263em 0.47368em 0;
  text-align: left;
  text-transform: none;
}

.glamor-1:last-child,
[data-glamor-1]:last-child {
  padding-right: 0;
}

.glamor-3 th,
[data-glamor-3] th {
  font-weight: 700;
}

@media only screen and (min-width: 641px) {
  .glamor-0,
  [data-glamor-0] {
    font-size: 19px;
    line-height: 1.3;
  }
}

@media only screen and (min-width: 641px) {
  .glamor-1,
  [data-glamor-1] {
    font-size: 19px;
    line-height: 1.3;
  }
}

<Table
  body={
    <Row>
      <Cell>
        Example
      </Cell>
    </Row>
  }
  head={
    <Row>
      <Cell>
        Example
      </Cell>
    </Row>
  }
>
  <Styled(table)>
    <table
      className="glamor-7"
    >
      <glamorous(caption)>
        <caption
          className="glamor-0"
        />
      </glamorous(caption)>
      <glamorous(thead)>
        <thead
          className="glamor-3"
        >
          <Row>
            <glamorous(tr)>
              <tr
                className="glamor-2"
              >
                <Cell>
                  <glamorous(td)>
                    <td
                      className="glamor-1"
                    >
                      Example
                    </td>
                  </glamorous(td)>
                </Cell>
              </tr>
            </glamorous(tr)>
          </Row>
        </thead>
      </glamorous(thead)>
      <glamorous(tbody)>
        <tbody
          className="glamor-2"
        >
          <Row>
            <glamorous(tr)>
              <tr
                className="glamor-2"
              >
                <Cell>
                  <glamorous(td)>
                    <td
                      className="glamor-1"
                    >
                      Example
                    </td>
                  </glamorous(td)>
                </Cell>
              </tr>
            </glamorous(tr)>
          </Row>
        </tbody>
      </glamorous(tbody)>
    </table>
  </Styled(table)>
</Table>
`;
